--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,20 @@ code {
   font-family: 'JetBrains Mono', source-code-pro, Menlo, Monaco, Consolas,
     'Courier New', monospace;
 }
+
+::-webkit-scrollbar{
+  width: 6px
+}
+
+::-webkit-scrollbar-track{
+  background-color: rgba(249, 168, 212);
+  border-radios: 20px
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #606368;
+  border-radios: 10px
+}
+
+
+
